# free-functors

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  README  README.md  cabal.project  free-functors.cabal
.github/workflows/: haskell-ci.yml
examples/: Automaton.hs  FreeNum.hs  Laws.hs  NonEmptyList.hs  Parser.hs  Sem.hs  SemSum.hs
src/Data/Constraint/: Class1.hs
src/Data/Functor/: Cofree.hs  Free.hs  HCofree.hs  HFree.hs  HHCofree.hs  HHFree.hs
src/Data/Functor/Cofree/: Internal.hs
src/Data/Functor/Free/: Internal.hs  TH.hs
