name:                free-functors
version:             0
synopsis:            
description:         
category:            Data, Math
license:             BSD3
license-file:        LICENSE
author:              Sjoerd Visscher
maintainer:          sjoerd@w3future.com
stability:           experimental
homepage:            http://github.com/sjoerdvisscher/free-functors
bug-reports:         http://github.com/sjoerdvisscher/free-functors/issues

build-type:          Simple
cabal-version:       >= 1.10

Library
  HS-Source-Dirs:    
    src
  
  exposed-modules:   
    Data.Functor.Cofree,
    Data.Functor.Free,
    Data.Functor.HFree

  default-language:  
    Haskell2010

  build-depends:
    base >= 4.4 && < 5,
    constraints >= 0.3.2 && < 0.4,
    transformers >= 0.2.0.0 && < 0.4,
    comonad >= 3.0 && < 3.1

source-repository head
  type:     git
  location: git://github.com/sjoerdvisscher/free-functors.git